improvement/cleanup: simplified empty-table box code

--- a/templates/default/alias/aliaslist.html
+++ b/templates/default/alias/aliaslist.html
@@ -88,11 +88,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD colspan="4" class="empty-table">
-			<p>{trans("No such aliases in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="4" class="empty-table">
+			{trans("No such aliases in database.")}
+		</td>
+	</tr>
 	{/section}
 	{if $listdata.total != 0}
 	<TR>
