--- a/templates/default/balance/balancelist.html
+++ b/templates/default/balance/balancelist.html
@@ -261,11 +261,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="10" class="empty-table">
-			<p>{trans("No such transactions found in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="10" class="empty-table">
+			{trans("No such transactions found in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
