--- a/templates/default/cash/cashimport.html
+++ b/templates/default/cash/cashimport.html
@@ -114,9 +114,7 @@
 		{if !$listdata.total}
 			<tr>
 				<td class="empty-table" colspan="7">
-					<p>
-						<strong>{trans("No cash operations to import.")}</strong>
-					</p>
+					{trans("No cash operations to import.")}
 				</td>
 			</tr>
 		{/if}
