--- a/templates/default/cash/cashsourcelist.html
+++ b/templates/default/cash/cashsourcelist.html
@@ -62,7 +62,7 @@
 		{foreachelse}
 			<tr>
 				<td colspan="5" class="empty-table">
-					<p>{trans("There are no sources in database.")}</p>
+					{trans("There are no sources in database.")}
 				</td>
 			</tr>
 		{/foreach}
