--- a/templates/default/choose/choosenetdevfornetnode.html
+++ b/templates/default/choose/choosenetdevfornetnode.html
@@ -133,7 +133,7 @@
 	{else}
 	<tr>
 		<td colspan="3" class="empty-table">
-			<p>{trans("Net devices are missing.")}</p>
+			{trans("Net devices are missing.")}
 		</td>
 	</tr>
 	{/if}
