--- a/templates/default/choose/choosenode.html
+++ b/templates/default/choose/choosenode.html
@@ -74,7 +74,7 @@
 	{else}
 	<tr>
 		<td colspan="3" class="empty-table">
-			<p>{trans("That customer hasn't got any node.")}</p>
+			{trans("That customer hasn't got any node.")}
 		</td>
 	</tr>
 	{/if}
