--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -381,11 +381,11 @@
         {/block}
 	{foreachelse}
         {block name="customerlist-list-empty-row"}
-	<TR>
-		<TD colspan="{$number_of_table_columns}" class="empty-table">
-			<p>{trans("No such customers matching search criteria or list is empty.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="{$number_of_table_columns}" class="empty-table">
+			{trans("No such customers matching search criteria or list is empty.")}
+		</td>
+	</tr>
         {/block}
 	{/foreach}
 	</TBODY>
