--- a/templates/default/division/divisionlist.html
+++ b/templates/default/division/divisionlist.html
@@ -88,7 +88,7 @@
 		{foreachelse}
 			<tr>
 				<td colspan="7" class="empty-table">
-					<p>{trans("No such divisions in database.")}</p>
+					{trans("No such divisions in database.")}
 				</td>
 			</tr>
 		{/foreach}
