--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -276,11 +276,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="5" class="empty-table">
-			<p>{trans("No such documents matching search criteria or list is empty.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="5" class="empty-table">
+			{trans("No such documents matching search criteria or list is empty.")}
+		</td>
+	</tr>
 	{/foreach}
 	</FORM>
     </TBODY>
