--- a/templates/default/document/documenttypes.html
+++ b/templates/default/document/documenttypes.html
@@ -28,11 +28,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="2" class="empty-table">
-			<p>{trans("There are no types in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="2" class="empty-table">
+			{trans("There are no types in database.")}
+		</td>
+	</tr>
 	{/foreach}
 	</TBODY>
 	<TFOOT>
