--- a/templates/default/domain/domainlist.html
+++ b/templates/default/domain/domainlist.html
@@ -100,11 +100,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD colspan="6" class="empty-table">
-			<p>{trans("No such domains in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="6" class="empty-table">
+			{trans("No such domains in database.")}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
