--- a/templates/default/ewxch/ewxchlist.html
+++ b/templates/default/ewxch/ewxchlist.html
@@ -89,11 +89,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD COLSPAN="9" class="empty-table">
-			<p>{trans("No such channels in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="9" class="empty-table">
+			{trans("No such channels in database.")}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
