--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -292,11 +292,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD class="empty-table" COLSPAN="7">
-			<P>{trans("No such invoices in database.")}</P>
-		</TD>
-	</TR>
+	<tr>
+		<td class="empty-table" colspan="7">
+			{trans("No such invoices in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
