--- a/templates/default/message/messageinfo.html
+++ b/templates/default/message/messageinfo.html
@@ -243,11 +243,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD COLSPAN="6" class="empty-table">
-			<p>{trans("No such recipients in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="6" class="empty-table">
+			{trans("No such recipients in database.")}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
