--- a/templates/default/message/messagelist.html
+++ b/templates/default/message/messagelist.html
@@ -135,11 +135,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="5" class="empty-table">
-			<p>{trans("No such messages in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="5" class="empty-table">
+			{trans("No such messages in database.")}
+		</td>
+	</tr>
 	{/foreach}
 	</form>
     </TBODY>
