--- a/templates/default/message/messagetemplatelist.html
+++ b/templates/default/message/messagetemplatelist.html
@@ -96,11 +96,11 @@
 			</TD>
 		</TR>
 		{foreachelse}
-		<TR>
-			<TD colspan="7" class="empty-table">
-				<p>{trans("No message templates in database.")}</p>
-			</TD>
-		</TR>
+		<tr>
+			<td colspan="7" class="empty-table">
+				{trans("No message templates in database.")}
+			</td>
+		</tr>
 		{/foreach}
 	</TBODY>
 	<TFOOT>
