--- a/templates/default/net/netlist.html
+++ b/templates/default/net/netlist.html
@@ -106,11 +106,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="6" class="empty-table">
-			<p>{trans("No IP networks found in database.")} <A HREF="?m=netadd">{trans("Click to add.")}</A></p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="6" class="empty-table">
+			{trans("No IP networks found in database.")} <A HREF="?m=netadd">{trans("Click to add.")}</A>
+		</td>
+	</tr>
 	{/foreach}
 	</TBODY>
 </table>
