--- a/templates/default/netnode/netnodedevices.html
+++ b/templates/default/netnode/netnodedevices.html
@@ -83,11 +83,11 @@
 					</td>
 				</tr>
 				{foreachelse}
-				<TR>
-					<TD colspan="4" class="empty-table">
-						<p>{trans("No assigned devices.")}</p>
-					</TD>
-				</TR>
+				<tr>
+					<td colspan="4" class="empty-table">
+						{trans("No assigned devices.")}
+					</td>
+				</tr>
 				{/foreach}
 				</TBODY>
 			</TABLE>
