--- a/templates/default/node/nodelistshort.html
+++ b/templates/default/node/nodelistshort.html
@@ -30,11 +30,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
+	<tr>
 		<td class="empty-table">
-			<p>{trans("No nodes found in database.")}</p>
+			{trans("No nodes found in database.")}
 		</td>
-	</TR>
+	</tr>
 	{/foreach}
     </TBODY>
 </TABLE>
