--- a/templates/default/note/noteedit.html
+++ b/templates/default/note/noteedit.html
@@ -181,11 +181,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="5" class="empty-table">
-			<p>{trans("Debit note have no items. Use form below for items addition.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="5" class="empty-table">
+			{trans("Debit note have no items. Use form below for items addition.")}
+		</td>
+	</tr>
 	{/foreach}
 	{if $contents}
 	<TR>
