--- a/templates/default/note/notelist.html
+++ b/templates/default/note/notelist.html
@@ -156,11 +156,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="7" class="empty-table">
-			<p>{trans("No such debit notes in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="7" class="empty-table">
+			{trans("No such debit notes in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
