--- a/templates/default/numberplan/numberplanlist.html
+++ b/templates/default/numberplan/numberplanlist.html
@@ -131,11 +131,11 @@
 			</TD>
 		</TR>
 		{foreachelse}
-		<TR>
-			<TD colspan="8" class="empty-table">
-				<p>{trans("No such numbering plans in database.")}</p>
-			</TD>
-		</TR>
+		<tr>
+			<td colspan="8" class="empty-table">
+				{trans("No such numbering plans in database.")}
+			</td>
+		</tr>
 		{/foreach}
     </TBODY>
     <TFOOT>
