--- a/templates/default/payment/paymentlist.html
+++ b/templates/default/payment/paymentlist.html
@@ -70,11 +70,11 @@
 		</FORM>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="6" class="empty-table">
-			<p>{trans("No such standing payments in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="6" class="empty-table">
+			{trans("No such standing payments in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
