--- a/templates/default/promotion/promotionlist.html
+++ b/templates/default/promotion/promotionlist.html
@@ -86,11 +86,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="7" class="empty-table">
-			<p>{trans("There are no promotions in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="7" class="empty-table">
+			{trans("There are no promotions in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
