--- a/templates/default/promotion/promotionschemas.html
+++ b/templates/default/promotion/promotionschemas.html
@@ -62,11 +62,11 @@
 			    </TD>
 			</TR>
 			{foreachelse}
-			<TR>
-				<TD colspan="4" class="empty-table">
-					<p>{trans("This promotion hasn't got any schemas.")}</p>
-				</TD>
-			</TR>
+			<tr>
+				<td colspan="4" class="empty-table">
+					{trans("This promotion hasn't got any schemas.")}
+				</td>
+			</tr>
 			{/foreach}
 			</TBODY>
 			</TABLE>
