--- a/templates/default/promotion/promotiontariffs.html
+++ b/templates/default/promotion/promotiontariffs.html
@@ -60,11 +60,11 @@
 					</TD>
 				</TR>
 				{foreachelse}
-				<TR>
-					<TD colspan="7" class="empty-table">
-						<p>{trans("This promotion has no assigned tariffs.")}</p>
-					</TD>
-				</TR>
+				<tr>
+					<td colspan="7" class="empty-table">
+						{trans("This promotion has no assigned tariffs.")}
+					</td>
+				</tr>
 				{/foreach}
 				</TBODY>
 			</TABLE>
