--- a/templates/default/receipt/receiptedit.html
+++ b/templates/default/receipt/receiptedit.html
@@ -262,11 +262,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="4" class="empty-table">
-			<p>{trans("Receipt have no items. Use form below for items addition.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="4" class="empty-table">
+			{trans("Receipt have no items. Use form below for items addition.")}
+		</td>
+	</tr>
 	{/foreach}
 	{if $contents}
 	<TR>
