--- a/templates/default/rt/rtcategorylist.html
+++ b/templates/default/rt/rtcategorylist.html
@@ -79,11 +79,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="8" class="empty-table">
-			<p>{trans("There are no categories.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="8" class="empty-table">
+			{trans("There are no categories.")}
+		</td>
+	</tr>
 	{/foreach}
         </TBODY>
         <TFOOT>
