--- a/templates/default/rt/rtprinttickets-ext.html
+++ b/templates/default/rt/rtprinttickets-ext.html
@@ -69,18 +69,18 @@
 				    {$item.body|escape|replace:"\n":"<BR>"}
 				</TD>
 			    </TR>
-			    {/foreach}			
+			    {/foreach}
 			</TABLE>
 		</TD>
 	</TR>
 </TABLE><BR>
 {foreachelse}
 <TABLE WIDTH="640" CELLPADDING="3" BORDER="1" ALIGN="CENTER">
-	<TR>
-    		<TD class="empty-table">
-			<p>{trans("No such requests in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+    	<td class="empty-table">
+			{trans("No such requests in database.")}
+		</td>
+	</tr>
 </TABLE>
 {/foreach}
 {include file="clearfooter.html"}
