--- a/templates/default/voipaccount/voipaccountsearchresults.html
+++ b/templates/default/voipaccount/voipaccountsearchresults.html
@@ -82,7 +82,7 @@
         {sectionelse}
         <tr>
             <td class="empty-table" colspan="5">
-                <p>{trans("No such voip accounts matching search criteria.")}</p>
+                {trans("No such voip accounts matching search criteria.")}
             </td>
         </tr>
         {/section}
