--- a/userpanel/modules/info/templates/setup_changes.html
+++ b/userpanel/modules/info/templates/setup_changes.html
@@ -44,7 +44,7 @@
 					{foreachelse}
 						<tr>
 							<td class="empty-table" colspan="5">
-								<p>{trans("There are any changes to accept.")}</p>
+								{trans("There are any changes to accept.")}
 							</td>
 						</tr>
 					{/foreach}
