--- a/templates/default/account/accountlist.html
+++ b/templates/default/account/accountlist.html
@@ -133,11 +133,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD colspan="5" class="empty-table">
-			<p>{trans("No such accounts in database.")} {trans('Click $a to create.', '<a href="?m=accountadd">'|cat: trans("here")|cat: '</a>')}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="5" class="empty-table">
+			{trans("No such accounts in database.")} {trans('Click $a to create.', '<a href="?m=accountadd">'|cat: trans("here")|cat: '</a>')}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
