--- a/templates/default/customer/customergrouplist.html
+++ b/templates/default/customer/customergrouplist.html
@@ -62,11 +62,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD colspan="4" class="empty-table">
-			<p>{trans("There are no such groups in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="4" class="empty-table">
+			{trans("There are no such groups in database.")}
+		</td>
+	</tr>
 	{/foreach}
 	</TBODY>
 </TABLE>
