--- a/templates/default/customer/customersearchresults.html
+++ b/templates/default/customer/customersearchresults.html
@@ -147,11 +147,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD colspan="4" class="empty-table">
-			<p>{trans("No such customers matching search criteria.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="4" class="empty-table">
+			{trans("No such customers matching search criteria.")}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
