--- a/templates/default/node/nodesearchresults.html
+++ b/templates/default/node/nodesearchresults.html
@@ -80,11 +80,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD colspan="5" class="empty-table">
-			<p>{trans("No such nodes matching search criteria.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="5" class="empty-table">
+			{trans("No such nodes matching search criteria.")}
+		</td>
+	</tr>
 	{/section}
     </TBODY>
     <TFOOT>
