--- a/templates/default/print/printbalancelist.html
+++ b/templates/default/print/printbalancelist.html
@@ -79,11 +79,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-		<TD COLSPAN="8" class="empty-table">
-			<p>{trans("No such cash operations.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="8" class="empty-table">
+			{trans("No such cash operations.")}
+		</td>
+	</tr>
 	{/section}
 	<TR>
 		<TD CLASS="HEADGREY" ALIGN="RIGHT" COLSPAN="2">
