--- a/templates/default/rt/rtprintstats.html
+++ b/templates/default/rt/rtprintstats.html
@@ -56,11 +56,11 @@
 		</TD>
 	</TR>
 	{sectionelse}
-	<TR>
-	        <TD COLSPAN="6" class="empty-table">
-			<p>{trans("No such requests in database.")}</p>
-		</TD>
-	</TR>
+		<tr>
+			<td colspan="6" class="empty-table">
+				{trans("No such requests in database.")}
+			</td>
+		</tr>
 	{/section}
 	<TR class="grey">
 		<TD COLSPAN="2" ALIGN="RIGHT"><B>{trans("Total:")}</B></TD>
