--- a/templates/default/rt/rtprinttickets.html
+++ b/templates/default/rt/rtprinttickets.html
@@ -57,11 +57,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="7" class="empty-table">
-			<p>{trans("No such requests in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="7" class="empty-table">
+			{trans("No such requests in database.")}
+		</td>
+	</tr>
 	{/foreach}
 </TABLE>
 {include file="clearfooter.html"}
