--- a/templates/default/tariff/tarifflist.html
+++ b/templates/default/tariff/tarifflist.html
@@ -193,11 +193,11 @@
 		</TD>
 	</TR>
 	{foreachelse}
-	<TR>
-		<TD COLSPAN="8" class="empty-table">
-			<p>{trans("No such subscriptions in database.")}</p>
-		</TD>
-	</TR>
+	<tr>
+		<td colspan="8" class="empty-table">
+			{trans("No such subscriptions in database.")}
+		</td>
+	</tr>
 	{/foreach}
     </TBODY>
     <TFOOT>
