--- a/templates/default/taxrate/taxratelist.html
+++ b/templates/default/taxrate/taxratelist.html
@@ -94,11 +94,11 @@
 				</td>
 			</tr>
 		{sectionelse}
-			<TR>
-				<TD colspan="8" class="empty-table">
-					<p>{trans("No such tax rates in database.")}</p>
-				</TD>
-			</TR>
+			<tr>
+				<td colspan="8" class="empty-table">
+					{trans("No such tax rates in database.")}
+				</td>
+			</tr>
 		{/section}
 	</tbody>
 	<tfoot>
