--- a/templates/default/user/usergrouplist.html
+++ b/templates/default/user/usergrouplist.html
@@ -55,11 +55,11 @@
 		    </td>
 		</tr>
 	    {foreachelse}
-		<tr>
-		    <td colspan="4" class="empty-table">
-			<p>{trans("There are no such groups in database.")}</p>
-		    </td>
-		</tr>
+			<tr>
+				<td colspan="4" class="empty-table">
+					{trans("There are no such groups in database.")}
+				</td>
+			</tr>
 		{/foreach}
 	</tbody>
     </table>
