--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -270,7 +270,7 @@
         {foreachelse}
 			<tr>
 				<td class="empty-table" colspan="{$number_of_table_columns}">
-					<p>{trans("No CDR records found in database.")}</p>
+					{trans("No CDR records found in database.")}
 				</td>
 			</tr>
         {/foreach}
