--- a/templates/default/voipaccount/voipaccountlist.html
+++ b/templates/default/voipaccount/voipaccountlist.html
@@ -126,7 +126,7 @@
         {block name="voipaccountlist-list-empty-row"}
         <tr>
             <td class="empty-table" colspan="{$number_of_table_columns}">
-                <p>{trans("No such voip accounts in database.")}</p>
+                {trans("No such voip accounts in database.")}
             </td>
         </tr>
         {/block}
