improvement/cleanup: simplified empty-table box code (bugfix)

--- a/css/style.less
+++ b/css/style.less
@@ -1352,6 +1352,11 @@ table.lmsbox {
 					}
 				}
 			}
+			&.empty-table {
+				text-align: center;
+				font-weight: bold;
+				padding: 2.5em;
+			}
 		}
 		& > thead {
 			background-color: @dark;
