--- a/templates/default/rt/rtqueueinfo.html
+++ b/templates/default/rt/rtqueueinfo.html
@@ -239,10 +239,10 @@
 		{button icon="view" href="?m=rtqueueview&id={$queue.id}" label="Browse"}
 		{button icon="save" href="?m=rtqueueedit&id={$queue.id}" label="Edit"}
 		{if $queue.deleted == 1 && $queue.deltime != 0 && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}
-			{button id="restore-rtqueue" href="?m=rtrestore&id={$queue.id}&qaction=restore" data_name="{$queue.name}" icon="restore" label="Restore<!RT>"}
-			{button id="remove-rtqueue" href="?m=rtremove&id={$queue.id}&qaction=delperm" data_name="{$queue.name}" icon="delete" label="Delete permanently"}
+			<A id="restore-rtqueue" HREF="?m=rtrestore&id={$queue.id}&qaction=restore" data-name="{$queue.name}"><IMG src="img/reload.gif" alt="{trans("Restore<!RT>")}" title="{trans("Restore<!RT>")}"> {trans("Restore<!RT>")}</A>
+			<A id="remove-rtqueue" HREF="?m=rtremove&id={$queue.id}&qaction=delperm" data-name="{$queue.name}"><IMG src="img/delete.gif" alt="{trans("Delete permanently")}" title="{trans("Delete permanently")}"> {trans("Delete permanently")}</A>
 		{else}
-			{button id="delete-rtqueue" href="?m=rtqueuedel&id={$queue.id}&qaction=delete" data_name="{$queue.name}" icon="delete" label="Delete"}
+			<A id="delete-rtqueue" HREF="?m=rtqueuedel&id={$queue.id}&qaction=delete" data-name="{$queue.name}"><IMG src="img/delete.gif" alt="{trans("Delete")}" title="{trans("Delete")}"> {trans("Delete")}</A>
 		{/if}
 	    </TD>
 	</TR>
