codecleanup/devel: remove css class "lms-ui-icon-content" and add few buttons instead of <A>

--- a/templates/default/rt/rtticketmessagesbox.html
+++ b/templates/default/rt/rtticketmessagesbox.html
@@ -126,7 +126,7 @@
 	<THEAD>
 	<TR>
 		<TD style="width: 1%;" class="bold nobr">
-			<i class="lms-ui-icon-message"></i> <B>{trans("Ticket History")}</B>
+			{icon name="message" label="Ticket History"}
 		</TD>
 		<TD style="width: 99%;" class="text-right nobr" colspan="2">
 			<label>
