--- a/templates/default/event/eventlistbox_overdue.html
+++ b/templates/default/event/eventlistbox_overdue.html
@@ -11,7 +11,7 @@
     <THEAD>
         <TR class="superdark">
             <TD class="bold nobr" colspan="6">
-                <i class="lms-ui-icon-content lms-ui-icon-timetable"></i>
+                {icon name="timetable"}
                 {if !empty($overdue_events_only)}
                     {trans("Overdue events")}
                 {else}
