--- a/templates/default/rt/rtqueueviewboxrow.html
+++ b/templates/default/rt/rtqueueviewboxrow.html
@@ -50,11 +50,11 @@
 	</TD>
 	<TD class="valign-middle ticket-location">
 		{if $ticket.netnodeid}
-			<a href="?m=netnodeinfo&id={$ticket.netnodeid}"><i class="lms-ui-icon-content lms-ui-icon-netnode"></i>{$ticket.netnode_name}</a>
+			{button type="link" href="?m=netnodeinfo&id={$ticket.netnodeid}" icon="netnode" label=$ticket.netnode_name}
 		{/if}
 		{if $ticket.netdevid && $ticket.netnodeid }<br>{/if}
 		{if $ticket.netdevid}
-			<a href="?m=netdevinfo&id={$ticket.netdevid}"><i class="lms-ui-icon-content lms-ui-icon-netdevice"></i>{$ticket.netdev_name}</a>
+			{button type="link" href="?m=netdevinfo&id={$ticket.netdevid}" icon="netdevice" label=$ticket.netdev_name}
 		{/if}
 		{if $ticket.netdevid || $ticket.netnodeid }<br>{/if}
 		{if $ticket.address_id}
