--- a/templates/default/rt/rtticketinfobox.html
+++ b/templates/default/rt/rtticketinfobox.html
@@ -26,15 +26,15 @@
 	<TR>
 		<TD style="width: 100%;" class="navigation" colspan="3">
 			{if $ticket.prev_ticketid != NULL}
-				<A href="?m=rtticketview&id={$ticket.prev_ticketid}"><i class="lms-ui-icon-previous"></i>&nbsp;{trans("Previous ticket")}</A>
+				{button href="?m=rtticketview&id={$ticket.prev_ticketid}" icon="previous" label="Previous ticket"}
 			{else}
-			<i class="lms-ui-icon-previous"></i>&nbsp;{trans("Previous ticket")}
+				{button icon="previous" label="Previous ticket" disabled=true}
 			{/if}
 			&nbsp;&nbsp;&nbsp;
 			{if $ticket.next_ticketid != NULL}
-				<A href="?m=rtticketview&id={$ticket.next_ticketid}">{trans("Next ticket")}&nbsp;<i class="lms-ui-icon-next"></i></A>
+				{button href="?m=rtticketview&id={$ticket.next_ticketid}" label="Next ticket" icon="next"}
 			{else}
-				{trans("Next ticket")}&nbsp;<i class="lms-ui-icon-next"></i>
+				{button icon="next" label="Next ticket" disabled=true}
 			{/if}
 		</TD>
 	</TR>
@@ -48,7 +48,7 @@
 						<TABLE>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-subject"></i>{trans("Subject:")}
+									{icon name="subject" label="Subject:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									{$ticket.subject|trunescape:50}
@@ -57,7 +57,7 @@
 							{if $ticket.service != SERVICE_OTHER}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-service"></i>{trans("Service type:")}
+									{icon name="service" label="Service type:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
                                     {$_SERVICETYPES[$ticket.service]}
@@ -67,7 +67,7 @@
 							{if $ticket.type != RT_TYPE_OTHER}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-type"></i>{trans("Ticket type:")}
+									{icon name="type" label="Ticket type:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
                                     {trans($_RT_TYPES[$ticket.type].label)}
@@ -77,7 +77,7 @@
 							{if $ticket.customerid}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-customer"></i>{trans("Customer:")}
+									{icon name="customer" label="Customer:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									<A href="?m=customerinfo&id={$ticket.customerid}">{$ticket.customername|escape} (#{$ticket.customerid})</A>
@@ -106,7 +106,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-timetable"></i>{trans("Create time:")}
+									{icon name="timetable" label="Create time:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.createtime|date_format:"%Y/%m/%d %H:%M:%S"}
@@ -115,7 +115,7 @@
 							{if $ticket.creatorid}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-user"></i>{trans("Created by:")}
+									{icon name="user" label="Created by:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=userinfo&amp;id={$ticket.creatorid}">{$ticket.creator|escape}</a>
@@ -124,7 +124,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-uptime"></i>{trans("Uptime:")}
+									{icon name="uptime" label="Uptime:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.uptime}
@@ -133,7 +133,7 @@
 							{if !empty($ticket.categories)}
 							<TR>
 								<TD style="width: 1%;" class="valign-top bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-categories"></i>{trans("Categories:")}
+									{icon name="categories" label="Categories:"}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
 									{foreach from=$categories item=category}
@@ -150,7 +150,7 @@
 						<TABLE>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-owner"></i>{trans("Owner:")}
+									{icon name="owner" label="Owner:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.owner}
@@ -162,7 +162,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-verifier"></i>{trans("Verifier:")}
+									{icon name="verifier" label="Verifier:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.verifierid}
@@ -175,7 +175,7 @@
 							{if $ticket.deadline}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-timetable"></i>{trans("<!rt>Deadline:")}
+									{icon name="timetable" label="<!rt>Deadline:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.deadline}
@@ -188,7 +188,7 @@
 							{/if}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-queue"></i>{trans("Queue:")}
+									{icon name="queue" label="Queue:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=rtqueueview&amp;id={$ticket.queueid}">{$ticket.queuename}</A>
@@ -196,7 +196,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-status"></i>{trans("Status:")}
+									{icon name="status" label="Status:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$_RT_STATES[$ticket.state].label}
@@ -205,7 +205,7 @@
 							{if $ticket.cause}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-cause"></i>{trans("Cause:")}
+									{icon name="cause" label="Cause:"}
 								</TD>
 								<TD style="width: 99%;">
 									{if $ticket.cause==2}{trans("company's side")}
@@ -217,7 +217,7 @@
 							{if $ticket.deleted == 1 && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-user"></i>{trans("Remover:")}
+									{icon name="user" label="Remover:"}
 								</TD>
 								<TD style="width: 99%;">
 									<A href="?m=userinfo&id={$ticket.deluserid}">{$ticket.delusername|escape}</A>
@@ -225,7 +225,7 @@
 							</TR>
 							<TR>
 								<TD style="width: 1%;" class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-remove"></i>{trans("Remove date:")}
+									{icon name="remove" label="Remove date:"}
 								</TD>
 								<TD style="width: 99%;">
 									{$ticket.deltime|date_format:"%Y/%m/%d %H:%M.%S"}
@@ -235,7 +235,7 @@
 							{if $ticket.source}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-source"></i>{trans("Ticket source:")}
+									{icon name="source" label="Ticket source:"}
 								</TD>
 								<TD>
 									{$_RT_SOURCES[$ticket.source]}
@@ -245,7 +245,7 @@
 							{if isset($ticket.priority)}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-priority"></i>{trans("Priority:")}
+									{icon name="priority" label="Priority:"}
 								</TD>
 								<TD>
 									<span style="{$_RT_PRIORITY_STYLES[$ticket.priority]}">{$_RT_PRIORITIES[$ticket.priority]}</span>
@@ -255,7 +255,7 @@
 							{if $ticket.address_id}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-location"></i>{trans("Location:")}
+									{icon name="location" label="Location:"}
 								</TD>
 								<TD>
 									{$ticket.location|escape}
@@ -265,7 +265,7 @@
 							{if $ticket.nodeid}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-node"></i>{trans("Node:")}
+									{icon name="node" labe="Node:"}
 								</TD>
 								<TD>
 									<a href="?m=nodeinfo&id={$ticket.nodeid}">
@@ -277,7 +277,7 @@
 							{if $ticket.netnodeid}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-netnode"></i>{trans("Network Device Node:")}
+									{icon name="netnode" label="Network Device Node:"}
 								</TD>
 								<TD>
 									<A href="?m=netnodeinfo&id={$ticket.netnodeid}">{$ticket.netnode_name|escape}</A>
@@ -287,7 +287,7 @@
 							{if $ticket.netdevid}
 							<TR>
 								<TD class="bold nobr">
-									<i class="lms-ui-icon-content lms-ui-icon-netdev"></i>{trans("Device:")}
+									{icon name="netdev" label="Device:"}
 								</TD>
 								<TD>
 									<A href="?m=netdevinfo&id={$ticket.netdevid}">{$ticket.netdev_name|escape}</A>
