--- a/templates/default/event/eventinfoshort.html
+++ b/templates/default/event/eventinfoshort.html
@@ -18,7 +18,7 @@
     <THEAD>
     <TR>
         <TD>
-            {icon name="timetable"}
+            {icon name="timetable" fw=true}
         </TD>
         <TD class="bold">
             {trans("Title:")}
