--- a/templates/default/event/eventsearch.html
+++ b/templates/default/event/eventsearch.html
@@ -148,8 +148,8 @@
         </TR>
 	<TR>
 		<TD align="right" colspan="3">
-			<A href="javascript:document.event.submit();" accesskey="s"><IMG src="img/save.gif" alt=""> {trans("Search")}</A>
-			<A href="?m=eventlist"><IMG src="img/cancel.gif" alt=""> {trans("Cancel")}</A>
+			{button onclick="document.event.submit()" accesskey="s" icon="save" label="Search"}
+			{button href="?m=eventlist" icon="cancel" label="Cancel"}
 		</TD>
 	</TR>
     </TBODY>
