--- a/templates/default/rt/rtticketchildren.html
+++ b/templates/default/rt/rtticketchildren.html
@@ -7,7 +7,7 @@
 	<THEAD>
 		<TR class="hand lmsbox-titlebar nobr" data-lmsbox-content="childpanel-{$layout.module}">
 			<TD class="bold">
-				{icon class="helpdesk" label="Child tickets:"}
+				{icon class="helpdesk" label="Child tickets:" fw=true}
 			</TD>
 			<TD>
 				{if $ticket.state != $smarty.const.RT_RESOLVED}
