--- a/templates/default/rt/rtcategoryinfo.html
+++ b/templates/default/rt/rtcategoryinfo.html
@@ -84,7 +84,7 @@
 			{button icon="helpdesk" label="Tickets" onclick="location.href = '?m=rtqueueview&catid={$category.id}';"}
 			{button icon="save" label="Edit" onclick="location.href = '?m=rtcategoryedit&id={$category.id}';"}
 			{button id="delete-rtcategory" icon="delete" label="Delete" data_name="{$category.name}"
-				href="?m=rtcategorydel&id={$category.id}"}
+				data_resource_id=$category.id}
 		</TD>
 	</TR>
 	</TBODY>
@@ -95,7 +95,7 @@
 		$('#delete-rtcategory').click(function () {
 			var name = $(this).attr('data-name');
 			confirmDialog($t("Are you sure, you want to remove category '$a'?", name), this).done(function () {
-				location.href = $(this).attr('href');
+				location.href = '?m=rtcategorydel&id=' + $(this).attr('data-resource-id');
 			});
 			return false;
 		});
