improvement: small visual tweak

--- a/templates/default/rt/rtcategorylist.html
+++ b/templates/default/rt/rtcategorylist.html
@@ -37,7 +37,7 @@
 			<TD class="text-center">
 				{trans("Last:")}
 			</TD>
-			<TD>
+			<TD class="text-right">
 				{button icon="add" label="New Category" onclick="location.href = '?m=rtcategoryadd'"}
 			</TD>
 		</TR>
