--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -439,7 +439,7 @@
 	</TR>
 	<TR>
 		<TD class="bold nobr">
-			{icon name="modified-date" fw=true class="lms-ui-icon-spacer"} {trans("Qualification operator:")}
+			{icon name="spacer" fw=true} {trans("Qualification operator:")}
 		</TD>
 		<TD>
 			<INPUT class="radio light" type="radio" id="operator0" value="AND" name="k"{if $k!='OR'} CHECKED{/if}><label for="operator0">{trans("and")}</label>
