improvement: adds fa spacer CSS class (#2019)
* improvement: adds fa spacer class

This very simple and neat hack adds CSS class which sets any icon to transparent color, thus with it, we have empty/blank fa icon, which can be used as an spacer and also it will maintain fixed width with other used icons.

As an example I've used it to replace spacer in customersearch form.

* Simplified spacer

Co-authored-by: Rafał Wójcik <rafal.wojcik@gmail.com>

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -36,6 +36,16 @@
   text-align: center;
 }
 
+.lms-ui-icon-spacer {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-circle;
+    color: transparent;
+  }
+}
+
 .lms-ui-icon-map-pin {
   .fa-icon;
   .fas;
